Update vercel.json for correct file paths

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,18 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "./app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "/app.js"
+    },
+    {
+      "src": "/.*",
+      "dest": "app.js"
     }
   ]
 }
